@@ -43,4 +43,9 @@ sub t_detect_and_load_perl_modules : Test(4)
   like($dnsver, qr/([0-9]+)\.([0-9]+)/, "Net::DNS correctly loaded, version is $dnsver");
 }
 
+sub t_mimedefang_version : Test(1)
+{
+  like(md_version(), qr/[0-9]\.[0-9]{2}/);
+}
+
 __PACKAGE__->runtests();
